# GPT3-wellbeingAssist

./: .bak  README.md  backend_functions.py  environment_droplet.yml  logic1.py  promp1.py  promp4.py  prompts.py  pyproject.toml  run.sh  scripts.py  ui.py
app/: app_config.py  environment_droplet.yml  prompts.py  storage.txt  ui.py
app/pages/: experimentation.py  results.py
datasets/: chinese_to_english_text_summarization.yml
