[tool.poetry]
name = "GPT3-wellbeing"
version = "0.1.2"
description = ""
authors = ["Eugene Chung <ycechung@myseneca.ca>"]

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.__pycache__
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.10"
alembic = "*"
sqlalchemy = "*"
streamlit = "^0.81.0"
openai = "^1.9.0"
openai-finetune = "*"
requests = "^2.31.0"
loguru = "^0.7.2"
pyyaml = "*"
tokenizers = "^0.14.0"
transformers = "^4.21"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
jupyter = "^1.0.0"

[tool.poetry.scripts]
st-server = "scripts:st_server"
migrate = "scripts:migrations"

[build-system]
requires = ["poetry==2.2"]
build-backend = "poetry.masonry.api"
